<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2</string>
    <string name="action_settings">Settings</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="Mjia">M+</string>
    <string name="Mjian">M-</string>
    <string name="Zuo">←</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="jiajian">±</string>
    <string name="genghao">√</string>
    <string name="qi">7</string>
    <string name="ba">8</string>
    <string name="jiu">9</string>
    <string name="chu">/</string>
    <string name="bai">%</string>
    <string name="si">4</string>
    <string name="wu">5</string>
    <string name="liu">6</string>
    <string name="cheng">*</string>
    <string name="fenzhi">1/x</string>
    <string name="yi">1</string>
    <string name="er">2</string>
    <string name="san">3</string>
    <string name="jian">-</string>
    <string name="ling">0</string>
    <string name="dian">.</string>
    <string name="jia">+</string>
    <string name="deng">=</string>
</resources>